Did correction in the Home page, fixed styling and made some api routes

--- a/frontend/MemoMedia/src/Components/css/LoadingImage.module.css
+++ b/frontend/MemoMedia/src/Components/css/LoadingImage.module.css
@@ -3,7 +3,8 @@ body {
   }
   
   .skeleton {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 350px;
     animation: skeleton-loading 1s linear infinite alternate;
     border-radius: 10px;
