Added the Search Feature and Changed the Types

--- a/frontend/MemoMedia/src/Pages/css/HomeFeed.module.css
+++ b/frontend/MemoMedia/src/Pages/css/HomeFeed.module.css
@@ -7,3 +7,11 @@
     grid-template-columns: 2fr 4fr 1fr;
 
 }
+.loadingClass{
+    width: 376px;
+}
+@media (width<400px) {
+    .loadingClass{
+        width: 300px;
+    }
+}
